refactor: complete code cleanup and optimization